# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added support to broadcast-listener for extracting address, native vlan
  and management IP address from CDP packets. [Tom]
	
o [NSE] Added the script broadcast-networker-discover that discoverer EMC
  Networker servers on the LAN. [Patrik]

o [NSE] Added RPC Call CALLIT to the RPC library and modified UDP sockets to be
  unconnected in order to support broadcast. [Patrik]

o Integrated latest IPv6 OS submissions and corrections.

o [NSE] Added a sslcert library that gets and caches SSL certificates in the
  registry. Modified the scripts ssl-cert and ssl-google-cert-catalog to take
  advantage of this change. [Patrik]

o [NSE] Added host based registry, which allows scripts to share data between
  scripts scanning a specific host. [Patrik]

o [NSE] Applied patch from Andrew Orr that fixes the recent changes in the
  BitCoin protocol. [Patrik]

o [NSE] Added a Network Data Management Protocol (ndmp) library and the
  scripts:
  + ndmp-version - retrieves version information
  + ndmp-fs-info - retrieves information about remote filesystems
  [Patrik]

o [NSE] Added the script http-vuln-cve2010-2861 to detect the Cold Fusion
  CVE-2010-2861 directory traversal vulnerability. [Micah Hoffman]

o [NSE] Added support for edns-client-subnet requests to the DNS library and
  the script dns-client-subnet-scan that scans for addresses resolved from
  different subnets. [John Bond]

o [NSE] Added support for decoding EIGRP broadcasts from Cisco routers
  to broadcast-listener. [Tom]

o [NSE] Added redirect support to the http library. All calls to http.get and
  http.head now transparently handle any HTTP redirects. [Patrik]

o [NSE] Added asn-to-prefix.nse by John Bond, to convert AS numbers to
  IP address ranges and optionally scan them.

o [NSE] Modified the sql-injection script to use the httpspider library.
  [Lauri Kokkonen]

o [NSE] Added a rsync library and two new script: